--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -12,35 +12,30 @@
     z-index: 999;
 }
 
-.textopost, img{
-    max-width: 800px;
-    height: auto;
-}
-
 @media (max-width: 768px) {
-    .textopost, img{
-        max-width: 400px;
+    img{
+        max-width: 200px;
         height: auto;
     }
 }
 
-@media (min-width: 768px) and (max-width: 991px)  {
-    .textopost, img{
-        max-width: 600px;
+@media (min-width: 769px) and (max-width: 991px)  {
+     img {
+        max-width: 200px;
         height: auto;
     }
 }
 
 @media (min-width: 992px) and (max-width: 1200px)  {
-    .textopost, img{
-        max-width: 830px;
+     img {
+        max-width: 630px;
         height: auto;
     }
 }
 
 @media (min-width: 1200px)  {
-    .textopost, img{
-        max-width: 1000px;
+     img {
+        max-width: 700px;
         height: auto;
     }
 }
