--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -12,6 +12,18 @@
     z-index: 999;
 }
 
+.body-404 {
+    background: #2E95EF;
+    background-image: -moz-radial-gradient(center 45deg,circle cover, #9BD1FF, #2E95EF);
+    background-image: -webkit-gradient(radial, 50% 50%, 0, 50% 50%,800, from(#9BD1FF), to(#2E95EF));
+    padding-top: 15%;
+}
+.img-error{
+    width:220px;
+    height:220px;
+}
+
+
 @media (max-width: 768px) {
     img{
         max-width: 200px;
